bookinfo-app/overlays/k8s/bookinfo-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  name: bookinfo-sw
